Handle relation between agent application and edge